Add 'none' values to data file, adjust warnings

--- a/template.html
+++ b/template.html
@@ -41,8 +41,8 @@
 			<span class="addtocalendar atc-style-blue">
 				<var class="atc_event">
 					<var class="atc_date_start">{{.Startdate}}</var>
-					<var class="atc_date_end"></var>
-					<var class="atc_timezone">Europe/London</var>
+					<var class="atc_date_end">{{.Startdate}}</var>
+					<var class="atc_timezone">Europe/Moscow</var>
 					<var class="atc_title">{{.Title}}</var>
 					<var class="atc_description"></var>
 					<var class="atc_location">{{.Location}}</var>
@@ -50,6 +50,7 @@
 					<var class="atc_organizer_email">sergeyb@openvz.org</var>
 				</var>
 			</span>
+
 		</dd>
 		{{end}}
 	</dl>
