load css via https

--- a/template.html
+++ b/template.html
@@ -11,7 +11,7 @@
   <meta name="application-name" content="">
   <link rel="stylesheet" href="main.css">
   <title>Open Source Conferences</title>
-  <link href="http://addtocalendar.com/atc/1.5/atc-style-blue.css" rel="stylesheet" type="text/css">
+  <link href="https://addtocalendar.com/atc/1.5/atc-style-blue.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
