--- a/template.html
+++ b/template.html
@@ -24,7 +24,7 @@
 			var h = d[g]('body')[0];h.appendChild(s); }})();
     </script>
 	<header><h1>Open Source Conferences</h1></header>
-	<h2><a href="feed.xml">Subscribe</a></h2>
+	<h2><a href="conf-rss.xml">Subscribe to RSS feed</a></h2>
 
 	<h2>List of the closest conferences</h2>
 
