Update conferences days:
- CubaConf
- Kernel Recipes
- EuroBSDCon
- ContainerSched

--- a/template.html
+++ b/template.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 
-<!-- made with love by OpenVZ developers -->
+<!-- Made with love by OpenVZ developers -->
 
 <head>
   <meta charset="utf-8">
