Event Date -> Begin Date

--- a/template.html
+++ b/template.html
@@ -29,7 +29,7 @@
   <li class="table-list-header">
     <div class="table-list-cell call-days">Closes</div>
     <div class="table-list-cell">Conference</div>
-    <div class="table-list-cell call-date">Event Date</div>
+    <div class="table-list-cell call-date">Begin Date</div>
     <div class="table-list-cell call-country">Location</div>
   </li>
   
