--- a/template.html
+++ b/template.html
@@ -46,7 +46,7 @@
 {{range .}}
   <li class="table-list-row">
     <div class="table-list-cell call-days">
-        {{if and (ne .CFPURL "none") (ne .CFPURL "") (gt .DaysLeft 0)}}<a class="call-link" href="{{.CFPURL}}">{{.DaysLeft}}<br>day</a>{{end}}
+        {{if and (ne .CFPURL "none") (ne .CFPURL "") (ne .DaysLeft 1000)}}<a class="call-link" href="{{.CFPURL}}">{{.DaysLeft}}<br>day</a>{{else if ne .DaysLeft 1000 }}{{.DaysLeft}}<br>day{{end}}
     </div>
     <div class="table-list-cell">
       <a class="call-link" href="{{.URL}}">{{.Title}}</a>
@@ -61,6 +61,7 @@
       </div>
       <footer>
         <a class="rss" href="/conf-rss.xml">RSS</a>
+        <!--<a class="rss" href="/conf-rss.csv">CSV</a>-->
       </footer>
     </div>
   </body>
