minor update in html template

--- a/template.html
+++ b/template.html
@@ -30,13 +30,13 @@
     <div class="table-list-cell call-days">
 	</div>
     <div class="table-list-cell">
-На этой странице собраны конференции на тему разработки ПО c датами начала этих конференций и датами приёма докладов. Естественно не возможно следить за всеми конференциями, поэтому список включает только те, которые интересны мне. Если какая-то конференция отсутствует, то добавить её можно <a href="https://github.com/ligurio/oss-events">здесь</a>.
+На этой странице собраны конференции на тему разработки ПО c датами начала этих конференций и датами приёма докладов. Естественно не возможно следить за всеми конференциями, поэтому список включает только те, которые интересны мне. Если какая-то конференция отсутствует, то добавить её можно <a href="https://github.com/ligurio/oss-events">здесь</a>. Также есть <a href="conf-rss.xml">RSS лента</a>, которая напоминает о закрытии приёма докладов за 5 и 10 дней.
     </div>
     <div class="table-list-cell call-days">
 	</div>
   </li>
   <li class="table-list-header">
-    <div class="table-list-cell call-days">Closes</div>
+    <div class="table-list-cell call-days">CFP Closes</div>
     <div class="table-list-cell">Conference</div>
     <div class="table-list-cell call-date">Begin Date</div>
     <div class="table-list-cell call-country">Location</div>
@@ -60,7 +60,7 @@
 
       </div>
       <footer>
-        <a class="rss" href="/conf-rss.xml">RSS</a>
+        <a class="rss" href="conf-rss.xml">RSS</a>
         <!--<a class="rss" href="/conf-rss.csv">CSV</a>-->
       </footer>
     </div>
