Update description and RSS feed URL in the HTML template

--- a/template.html
+++ b/template.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="open source, conference">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Tracking of opensource events: Call for speakers and opensource release dates.">
-    <link rel="alternate" type="application/rss+xml" title="Call for speakers RSS Feed" href="conf-rss.xml">
+    <link rel="alternate" type="application/rss+xml" title="Keep your eyes on opensource events" href="http://feeds.feedburner.com/opensource-events">
     <link href='https://fonts.googleapis.com/css?family=Roboto:500,300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://calltospeakers.com/static/css/prefix-style.css">
   </head>
@@ -30,7 +30,7 @@
     <div class="table-list-cell call-days">
 	</div>
     <div class="table-list-cell">
-На этой странице собраны конференции на тему разработки ПО c датами начала этих конференций и датами приёма докладов. Естественно не возможно следить за всеми конференциями, поэтому список включает только те, которые интересны мне. Если какая-то конференция отсутствует, то добавить её можно <a href="https://github.com/ligurio/oss-events">здесь</a>. Также есть <a href="conf-rss.xml">RSS лента</a>, которая напоминает о закрытии приёма докладов за 5 и 10 дней.
+На этой странице собраны конференции на тему разработки ПО c датами начала этих конференций и датами приёма докладов. Естественно не возможно следить за всеми конференциями, поэтому список включает только те, которые интересны мне. Если какая-то конференция отсутствует, то добавить её можно <a href="https://github.com/ligurio/oss-events">здесь</a>. Можно подписаться на обновления по <a href="http://feeds.feedburner.com/opensource-events">RSS</a> или <a href="https://feedburner.google.com/fb/a/mailverify?uri=opensource-events&amp;loc=en_US">почте</a>, которые будут приходить за 5 и 10 дней до окончания приёма докладов.
     </div>
     <div class="table-list-cell call-days">
 	</div>
