Update link to the RSS feed at the bottom of page

--- a/template.html
+++ b/template.html
@@ -60,7 +60,7 @@
 
       </div>
       <footer>
-        <a class="rss" href="conf-rss.xml">RSS</a>
+        <a class="rss" href="http://feeds.feedburner.com/opensource-events">RSS</a>
         <!--<a class="rss" href="/conf-rss.csv">CSV</a>-->
       </footer>
     </div>
