--- a/template.html
+++ b/template.html
@@ -1,5 +1,3 @@
-<!-- Made with love by OpenVZ developers -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,7 +17,7 @@
     <div id="wrapper">
         <header id="nav">
           <a class="site-title" href="/">
-            <span>Мониторинг событий в мире opensource</span>
+            <span>Tracking of opensource events</span>
           </a>
         </header>
         
@@ -30,7 +28,15 @@
     <div class="table-list-cell call-days">
 	</div>
     <div class="table-list-cell">
-На этой странице собраны конференции на тему разработки ПО c датами начала этих конференций и датами приёма докладов. Естественно не возможно следить за всеми конференциями, поэтому список включает только те, которые интересны мне. Если какая-то конференция отсутствует, то добавить её можно <a href="https://github.com/ligurio/oss-events">здесь</a>. Можно подписаться на обновления по <a href="http://feeds.feedburner.com/opensource-events">RSS</a> или <a href="https://feedburner.google.com/fb/a/mailverify?uri=opensource-events&amp;loc=en_US">почте</a>, которые будут приходить за 5 и 10 дней до окончания приёма докладов.
+This page contains a list of conferences on software development with start
+dates and CFP dates. Of course it is not possible to monitor all the
+conferences, so the list includes only those that are of interest to me. If any
+of the conference is missing, <a
+href="https://github.com/ligurio/oss-events">add it yourself</a>. You can sign
+up for updates <a href="http://feeds.feedburner.com/opensource-events">via
+RSS</a> or <a
+href="https://feedburner.google.com/fb/a/mailverify?uri=opensource-events&amp;loc=en_US">email</a>,
+which will come in 5 and 10 days before the end of CFP.
     </div>
     <div class="table-list-cell call-days">
 	</div>
