Update link to the file with conferences in GIT repo

--- a/template.html
+++ b/template.html
@@ -32,7 +32,7 @@ This page contains a list of conferences on software development with start
 dates and CFP dates. Of course it is not possible to monitor all the
 conferences, so the list includes only those that are of interest to me. If any
 of the conference is missing, <a
-href="https://github.com/ligurio/oss-events">add it yourself</a>. You can sign
+href="https://github.com/ligurio/oss-events/edit/master/conf.yml">add it yourself</a>. You can sign
 up for updates <a href="http://feeds.feedburner.com/opensource-events">via
 RSS</a> or <a
 href="https://feedburner.google.com/fb/a/mailverify?uri=opensource-events&amp;loc=en_US">email</a>,
