Added link to the twitter list

--- a/template.html
+++ b/template.html
@@ -36,7 +36,7 @@ href="https://github.com/ligurio/oss-events/edit/master/conf.yml">add it yoursel
 up for updates <a href="http://feeds.feedburner.com/opensource-events">via
 RSS</a> or <a
 href="https://feedburner.google.com/fb/a/mailverify?uri=opensource-events&amp;loc=en_US">email</a>,
-which will come in 5 and 10 days before the end of CFP.
+which will come in 5 and 10 days before the end of CFP. Follow a <a href="https://twitter.com/estet/lists/foss-conferences">tweets timeline</a> of FOSS conferences.
     </div>
     <div class="table-list-cell call-days">
 	</div>
